[project]
name = "imgs2pdf"
version = "3.1.0"
description = "Imgs2PDF is a tool that makes PDF files from collections of independent image files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pillow", "reportlab"]

[tool.ruff]
line-length = 79

[tool.jedi-language-server]
line-length = 79
